# discord-rpc

./: CMakeLists.txt
src/: CMakeLists.txt
